--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,23 @@
-
 build_output/*
 code_drop/*
+
 **/*.suo
 **/*.user
 **/*.sln*
 bin
 obj
 _ReSharper*
-dist
-output
-build
 
 *.csproj.user
-
 *.resharper.user
-
 *.resharper
-
-*.suo
-
 *.cache
-
 *~
-
 *.swp
+*.bak
+*.orig
+
 TestResult.xml
 submit.xml
-*.bak
-
 src/tests/*
-
 SolutionVersion.cs
-
