--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -119,9 +119,12 @@
     <Compile Include="Collections\Util.cs" />
     <Compile Include="CombGuid.cs" />
     <Compile Include="CommandLineParser\ArgumentElement.cs" />
+    <Compile Include="CommandLineParser\CommandLineElementParser.cs" />
+    <Compile Include="CommandLineParser\FlagElement.cs" />
     <Compile Include="CommandLineParser\IArgumentElement.cs" />
     <Compile Include="CommandLineParser\ICommandLineParser.cs" />
     <Compile Include="CommandLineParser\IDefinitionElement.cs" />
+    <Compile Include="CommandLineParser\IFlagElement.cs" />
     <Compile Include="CommandLineParser\ISwitchElement.cs" />
     <Compile Include="CommandLineParser\ITokenElement.cs" />
     <Compile Include="CommandLineParser\MonadicCommandLineParser.cs" />
