--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -65,7 +65,9 @@
     <Compile Include="Calendar\IsHoliday_Specs.cs" />
     <Compile Include="Calendar\MemorialDayObservedCheck.cs" />
     <Compile Include="BehaviorTest.cs" />
-    <Compile Include="CommandLineParser\LinqSpecification_Specs.cs" />
+    <Compile Include="CommandLineParser\PlugInCommands\AddRemoteRepositoryCommand.cs" />
+    <Compile Include="CommandLineParser\PlugInCommands\LinqSpecification_Specs.cs" />
+    <Compile Include="CommandLineParser\PlugInCommands\RemoveRemoteRepositoryCommand.cs" />
     <Compile Include="Cryptography\DpapiCryptographyService_Specs.cs" />
     <Compile Include="Cryptography\RsaCryptographyService_Specs.cs" />
     <Compile Include="Activator\Classes\ClassWithAConstrainedGenericArgument.cs" />
