--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -152,6 +152,7 @@
     <Compile Include="StateMachine\Combine_Specs.cs" />
     <Compile Include="StateMachine\EventException_Specs.cs" />
     <Compile Include="StateMachine\FileImportWorkflow.cs" />
+    <Compile Include="StateMachine\OrderStateMachine.cs" />
     <Compile Include="StateMachine\StateVisualizer_Specs.cs" />
     <Compile Include="TypedKey_Specs.cs" />
     <Compile Include="Mapping_Specs.cs" />
