--- a/src/Magnum.Logging.Log4Net/Magnum.Logging.Log4Net.csproj
+++ b/src/Magnum.Logging.Log4Net/Magnum.Logging.Log4Net.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Log4NetLogger.cs" />
