--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -46,6 +46,14 @@
     <Compile Include="..\SolutionVersion.cs">
       <Link>SolutionVersion.cs</Link>
     </Compile>
+    <Compile Include="Actions\ActionQueue.cs" />
+    <Compile Include="Actions\ActionScheduler.cs" />
+    <Compile Include="Actions\ScheduledAction.cs" />
+    <Compile Include="Actions\Scheduler\ExecuteScheduledAction.cs" />
+    <Compile Include="Actions\Scheduler\ScheduledActionList.cs" />
+    <Compile Include="Actions\Scheduler\SingleScheduledAction.cs" />
+    <Compile Include="Actions\ThreadPoolActionQueue.cs" />
+    <Compile Include="Actions\TimerActionScheduler.cs" />
     <Compile Include="Actors\Actor.cs" />
     <Compile Include="Actors\AsyncActor.cs" />
     <Compile Include="Actors\AsyncHttpActor.cs" />
