--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -46,13 +46,16 @@
     <Compile Include="..\SolutionVersion.cs">
       <Link>SolutionVersion.cs</Link>
     </Compile>
+    <Compile Include="Actions\Internal\ActionList.cs" />
     <Compile Include="Actions\ActionQueue.cs" />
     <Compile Include="Actions\ActionQueueException.cs" />
+    <Compile Include="Actions\ActionQueueFullException.cs" />
     <Compile Include="Actions\ActionScheduler.cs" />
+    <Compile Include="Actions\Internal\IActionList.cs" />
     <Compile Include="Actions\ScheduledAction.cs" />
-    <Compile Include="Actions\ExecuteScheduledAction.cs" />
-    <Compile Include="Actions\ScheduledActionList.cs" />
-    <Compile Include="Actions\SingleScheduledAction.cs" />
+    <Compile Include="Actions\Internal\ExecuteScheduledAction.cs" />
+    <Compile Include="Actions\Internal\ScheduledActionList.cs" />
+    <Compile Include="Actions\Internal\SingleScheduledAction.cs" />
     <Compile Include="Actions\SynchronousActionQueue.cs" />
     <Compile Include="Actions\ThreadPoolActionQueue.cs" />
     <Compile Include="Actions\TimerActionScheduler.cs" />
