--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Actions\Internal\ScheduledActionList.cs" />
     <Compile Include="Actions\Internal\SingleScheduledAction.cs" />
     <Compile Include="Actions\SynchronousActionQueue.cs" />
+    <Compile Include="Actions\ThreadActionQueue.cs" />
     <Compile Include="Actions\ThreadPoolActionQueue.cs" />
     <Compile Include="Actions\TimerActionScheduler.cs" />
     <Compile Include="Actors\Actor.cs" />
