Added the channel API for sending to consumers

--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -103,9 +103,19 @@
     <Compile Include="Calendar\Holidays\MemorialDayObservedCheck.cs" />
     <Compile Include="Calendar\DefaultCalendar.cs" />
     <Compile Include="Calendar\Months.cs" />
-    <Compile Include="Channels\ActionQueueChannel.cs" />
+    <Compile Include="Channels\ConsumerChannel.cs" />
     <Compile Include="Channels\Channel.cs" />
+    <Compile Include="Channels\ActionQueueConsumer.cs" />
     <Compile Include="Channels\Consumer.cs" />
+    <Compile Include="Channels\DistinctIntervalConsumerChannel.cs" />
+    <Compile Include="Channels\Filter.cs" />
+    <Compile Include="Channels\Internal\IMessageDictionary.cs" />
+    <Compile Include="Channels\Internal\IMessageList.cs" />
+    <Compile Include="Channels\Internal\MessageDictionary.cs" />
+    <Compile Include="Channels\Internal\MessageList.cs" />
+    <Compile Include="Channels\IntervalConsumerChannel.cs" />
+    <Compile Include="Channels\LastIntervalConsumerChannel.cs" />
+    <Compile Include="Channels\SelectiveConsumerChannel.cs" />
     <Compile Include="Check.cs" />
     <Compile Include="CollectionExtensions\ComparerExtensions.cs" />
     <Compile Include="Collections\Algorithms.cs" />
