--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -68,6 +68,8 @@
     <Compile Include="Calendar\MemorialDayObservedCheck.cs" />
     <Compile Include="BehaviorTest.cs" />
     <Compile Include="Channels\ChannelQueue_Specs.cs" />
+    <Compile Include="Channels\Interval_Specs.cs" />
+    <Compile Include="Channels\PingPong_Specs.cs" />
     <Compile Include="CommandLineParser\PlugInCommands\AddFileCommand.cs" />
     <Compile Include="CommandLineParser\PlugInCommands\AddRemoteRepositoryCommand.cs" />
     <Compile Include="CommandLineParser\PlugInCommands\LinqSpecification_Specs.cs" />
