--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -103,24 +103,25 @@
     <Compile Include="Calendar\Holidays\MemorialDayObservedCheck.cs" />
     <Compile Include="Calendar\DefaultCalendar.cs" />
     <Compile Include="Calendar\Months.cs" />
-    <Compile Include="Channels\ChannelInstanceCache.cs" />
-    <Compile Include="Channels\ChannelProvider.cs" />
+    <Compile Include="Actions\ActionQueueProvider.cs" />
+    <Compile Include="Channels\ChannelCache.cs" />
+    <Compile Include="Channels\ChannelAccessor.cs" />
     <Compile Include="Channels\ConsumerChannel.cs" />
     <Compile Include="Channels\Channel.cs" />
     <Compile Include="Channels\Consumer.cs" />
-    <Compile Include="Channels\ChannelInstanceProvider.cs" />
-    <Compile Include="Channels\DictionaryChannelInstanceCache.cs" />
-    <Compile Include="Channels\DistinctIntervalConsumerChannel.cs" />
+    <Compile Include="Channels\ChannelProvider.cs" />
+    <Compile Include="Channels\DictionaryChannelCache.cs" />
+    <Compile Include="Channels\DistinctIntervalChannel.cs" />
     <Compile Include="Channels\Filter.cs" />
     <Compile Include="Channels\InstanceChannel.cs" />
     <Compile Include="Channels\Internal\IMessageDictionary.cs" />
     <Compile Include="Channels\Internal\IMessageList.cs" />
     <Compile Include="Channels\Internal\MessageDictionary.cs" />
     <Compile Include="Channels\Internal\MessageList.cs" />
-    <Compile Include="Channels\IntervalConsumerChannel.cs" />
-    <Compile Include="Channels\KeyProvider.cs" />
-    <Compile Include="Channels\LastIntervalConsumerChannel.cs" />
-    <Compile Include="Channels\SelectiveConsumerChannel.cs" />
+    <Compile Include="Channels\IntervalChannel.cs" />
+    <Compile Include="Channels\KeySelector.cs" />
+    <Compile Include="Channels\LastIntervalChannel.cs" />
+    <Compile Include="Channels\FilterChannel.cs" />
     <Compile Include="Check.cs" />
     <Compile Include="CollectionExtensions\ComparerExtensions.cs" />
     <Compile Include="Collections\Algorithms.cs" />
