--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Reflection\GenericMethodInvoker_Specs.cs" />
     <Compile Include="Reflection\GenericTypeReflection_Specs.cs" />
     <Compile Include="Reflection\Generic_AdditionalSpecs.cs" />
+    <Compile Include="Reflection\PropertyPerformance_Specs.cs" />
     <Compile Include="StateMachine\Anytime_Specs.cs" />
     <Compile Include="StateMachine\Combine_Specs.cs" />
     <Compile Include="StateMachine\EventException_Specs.cs" />
