Refactoring output channels to make dynamic and model bound

--- a/src/Magnum.Web/Magnum.Web.csproj
+++ b/src/Magnum.Web/Magnum.Web.csproj
@@ -55,10 +55,18 @@
     <Compile Include="Actors\ActorBinder.cs" />
     <Compile Include="Actors\ActorHttpAsyncHandler.cs" />
     <Compile Include="Actors\ActorBinderContext.cs" />
+    <Compile Include="Actors\ActorRequestContext.cs" />
     <Compile Include="Actors\ActorRouteBuilder.cs" />
     <Compile Include="Actors\ActorRouteHandler.cs" />
     <Compile Include="Actors\BasicActorBinder.cs" />
     <Compile Include="Actors\HasOutputChannel.cs" />
+    <Compile Include="Abstractions\HttpResponseContentWriter.cs" />
+    <Compile Include="Abstractions\JsonObjectWriter.cs" />
+    <Compile Include="Actors\HttpActorRequestContext.cs" />
+    <Compile Include="Abstractions\ObjectWriter.cs" />
+    <Compile Include="Abstractions\MediaType.cs" />
+    <Compile Include="Abstractions\ContentWriter.cs" />
+    <Compile Include="Actors\ResponseChannelFactory.cs" />
     <Compile Include="Binding\FastModelBinder.cs" />
     <Compile Include="Binding\ModelBinderContext.cs" />
     <Compile Include="Binding\ObjectPropertyBinder.cs" />
@@ -135,8 +143,10 @@
     <Compile Include="Binding\TypeSerializers\ULongSerializer.cs" />
     <Compile Include="Binding\TypeSerializers\UriSerializer.cs" />
     <Compile Include="Binding\TypeSerializers\UShortSerializer.cs" />
+    <Compile Include="Abstractions\JsonResponseChannel.cs" />
     <Compile Include="ValueProviders\AccessorValueProvider.cs" />
     <Compile Include="ValueProviders\DictionaryValueProvider.cs" />
+    <Compile Include="ValueProviders\ExtensionsForValueProviders.cs" />
     <Compile Include="ValueProviders\HttpRequestValueProvider.cs" />
     <Compile Include="ValueProviders\MultipleValueProvider.cs" />
     <Compile Include="ValueProviders\NestedValueProvider.cs" />
