--- a/src/Magnum.Web/Magnum.Web.csproj
+++ b/src/Magnum.Web/Magnum.Web.csproj
@@ -66,7 +66,6 @@
     <Compile Include="Abstractions\ObjectWriter.cs" />
     <Compile Include="Abstractions\MediaType.cs" />
     <Compile Include="Abstractions\ContentWriter.cs" />
-    <Compile Include="Actors\ResponseChannelFactory.cs" />
     <Compile Include="Binding\FastModelBinder.cs" />
     <Compile Include="Binding\ModelBinderContext.cs" />
     <Compile Include="Binding\ObjectPropertyBinder.cs" />
@@ -143,7 +142,7 @@
     <Compile Include="Binding\TypeSerializers\ULongSerializer.cs" />
     <Compile Include="Binding\TypeSerializers\UriSerializer.cs" />
     <Compile Include="Binding\TypeSerializers\UShortSerializer.cs" />
-    <Compile Include="Abstractions\JsonResponseChannel.cs" />
+    <Compile Include="Actors\ObjectResponseChannel.cs" />
     <Compile Include="ValueProviders\AccessorValueProvider.cs" />
     <Compile Include="ValueProviders\DictionaryValueProvider.cs" />
     <Compile Include="ValueProviders\ExtensionsForValueProviders.cs" />
